--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
           </div>
           <div class="cs-main_header_right">
             <div class="cs-toolbox">
-              <a href="buylink"
-                class="cs-btn cs-btn_filed cs-accent_btn cs-modal_btn" target="_blank">
+              <a href="buylink" class="cs-btn cs-btn_filed cs-accent_btn cs-modal_btn" target="_blank">
                 <span style="font-family: 'Space Ranger', sans-serif">Buy $FISH</span>
               </a>
             </div>
@@ -114,7 +113,8 @@
             <span style="font-family: 'Space Ranger', sans-serif"> X </span
             >project. -->
             <p style="width: 98%; max-width: 500px">
-              🐾 Welcome to Doug's realm! 🐾 Join us in celebrating the internet's most beloved pug from Nashville, Tennessee. 🎉 Let's spread the love for Doug together! 🐶❤️
+              🐾 Welcome to Doug's realm! 🐾 Join us in celebrating the internet's most beloved pug from Nashville,
+              Tennessee. 🎉 Let's spread the love for Doug together! 🐶❤️
             </p>
           </span>
         </a>
@@ -155,11 +155,18 @@
             </div>
             <div class="cs-height_20 cs-height_lg_20"></div>
             <a style="color: #fff; font-size: 20px">
-              🐾 Meet Doug, the charismatic canine sensation hailing from the heart of Nashville, Tennessee! 🎉 With his endearing charm and irresistible antics, Doug has pawed his way into the hearts of millions around the globe. 🌍 From his humble beginnings as a cherished companion to his rise as the reigning monarch of pop culture, Doug's journey is nothing short of extraordinary.
+              🐾 Meet Doug, the charismatic canine sensation hailing from the heart of Nashville, Tennessee! 🎉 With his
+              endearing charm and irresistible antics, Doug has pawed his way into the hearts of millions around the
+              globe. 🌍 From his humble beginnings as a cherished companion to his rise as the reigning monarch of pop
+              culture, Doug's journey is nothing short of extraordinary.
               <br />
 
               <p>
-                🌟 Join us as we delve into the captivating tale of Doug's rise to fame, from his adorable antics captured in a best-selling book to his status as the most adored pug on the internet. 📚🐾 Get ready to embark on a delightful adventure filled with laughter, love, and plenty of pug-tastic moments! 🐶💕 Welcome to the enchanting world of Doug, where every wag of the tail is a celebration of joy and every snuggle warms the soul. 🐾✨
+                🌟 Join us as we delve into the captivating tale of Doug's rise to fame, from his adorable antics
+                captured in a best-selling book to his status as the most adored pug on the internet. 📚🐾 Get ready to
+                embark on a delightful adventure filled with laughter, love, and plenty of pug-tastic moments! 🐶💕
+                Welcome to the enchanting world of Doug, where every wag of the tail is a celebration of joy and every
+                snuggle warms the soul. 🐾✨
               </p>
               <i class="cs-hero_subtitle cs-font_18 cs-font_16_sm cs-body_line_height"
                 style="font-size: 14px"><br /><br />Contract Address:
@@ -168,8 +175,7 @@
 
             <div class="cs-height_25 cs-height_lg_15"></div>
             <div class="cs-btn_group">
-              <a style="font-family: 'Space Ranger', sans-serif"
-                href="buylink"
+              <a style="font-family: 'Space Ranger', sans-serif" href="buylink"
                 class="cs-btn cs-btn_filed cs-accent_btn" style="margin-top: 2%">
                 <span>Buy Now</span>
               </a>
@@ -282,10 +288,13 @@
             <h2 class="fs-3 font-semibold text-white my-3">Phase 1</h2>
             <ul class="p-0 m-0">
               <li>DOUG Launch</li>
-              <li>The Inception of the Idea</li>
-              <li>Community Forming</li>
-              <li>Decentralized Approach</li>
-              <li>No CEX listings (Decentralization)</li>
+              <li>Community forming
+              </li>
+              <li>Dex update
+              </li>
+              <li>Sol trending
+              </li>
+              <li>Decentralized approach</li>
             </ul>
           </div>
         </div>
@@ -297,9 +306,14 @@
             <ul class="p-0 m-0">
               <li>Website Upgrade</li>
               <li>Marketing Phase 1</li>
-              <li>Community Forming</li>
-              <li>Twitter/X Trending</li>
+              <li>Birdseye Ads
+              </li>
+              <li>Dex Ads
+              </li>
+              <li>Twitter trending
+              </li>
               <li>Surprise Announcement</li>
+
             </ul>
           </div>
         </div>
@@ -311,9 +325,9 @@
             <ul class="p-0 m-0">
               <li>Strategical Partnerships</li>
               <li>YouTube & TikTok Exposure</li>
-              <li>Back to True Decentralization</li>
-              <li>The Future In The Past</li>
-              <li>Roadmap V2</li>
+              <li>Marketing Phase 2
+                </li>
+              <li>CEX Listings</li>
             </ul>
           </div>
         </div>
@@ -459,7 +473,7 @@
         <div style="text-align: center">
           <img src="./doug.jpg" style="max-width: 420px; width: 100%; margin-bottom: 30px; border-radius: 8px; alt="" />
         </div>
-        <div class="cs-cta_btns cs-center">
+        <div class=" cs-cta_btns cs-center">
           <a href="tglink" class="cs-btn cs-btn_filed cs-white_btn_2">
             <span style="font-family: 'Space Ranger', sans-serif">Join Our Community</span>
           </a>
