--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li>
                   <a href="ttlink" class="cs-smoth_scroll">Twitter</a>
                 </li>
-                <li><a href="tglink">Telegram</a></li>
+                <li><a href="https://t.me/DougThePugSolanaPortal">Telegram</a></li>
               </ul>
             </div>
           </div>
@@ -95,7 +95,7 @@
           D O U G
         </h1>
         <div class="cs-btn_group">
-          <a href="tglink" class="cs-btn cs-btn_filed cs-accent_btn"
+          <a href="https://t.me/DougThePugSolanaPortal" class="cs-btn cs-btn_filed cs-accent_btn"
             style="margin-top: 2%; font-family: 'Space Ranger', sans-serif"><span>TELEGRAM</span></a>
 
           <a href="ttlink" target="_blank" class="cs-btn cs-btn_filed cs-accent_btn"
@@ -474,7 +474,7 @@
           <img src="./doug.jpg" style="max-width: 420px; width: 100%; margin-bottom: 30px; border-radius: 8px; alt="" />
         </div>
         <div class=" cs-cta_btns cs-center">
-          <a href="tglink" class="cs-btn cs-btn_filed cs-white_btn_2">
+          <a href="https://t.me/DougThePugSolanaPortal" class="cs-btn cs-btn_filed cs-white_btn_2">
             <span style="font-family: 'Space Ranger', sans-serif">Join Our Community</span>
           </a>
           <a href="ttlink" class="cs-btn cs-btn_filed cs-white_btn">
